force-app/main/default/objects/Guest_Capture_Config__mdt/Guest_Capture_Config__mdt.object-meta.xml
<CustomObject>
    <description>Allowlists objects, search fields, Field Sets, and defaults for Experience Cloud guest record capture. Clients pass only the developer name; object API names never come from the browser.</description>
    <label>Guest Capture Config</label>
    <pluralLabel>Guest Capture Configs</pluralLabel>
</CustomObject>