force-app/main/default/objects/Guest_Capture_Config__mdt/fields/Default_Field_Values__c.field-meta.xml
<CustomField>
    <fullName>Default_Field_Values__c</fullName>
    <description>Optional JSON object mapping Field Set field API names to default values. Applied on create when the submitted value is empty. Query this field with SOQL (getInstance truncates long text).</description>
    <inlineHelpText>JSON map, for example {"FuelEfficiencyUnit":"MILES_PER_GALLON"}</inlineHelpText>
    <label>Default Field Values</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>