force-app/main/default/objects/Guest_Capture_Config__mdt/fields/Field_Set_Name__c.field-meta.xml
<CustomField>
    <fullName>Field_Set_Name__c</fullName>
    <description>Developer name of the Field Set on the target object that defines create fields and the create whitelist.</description>
    <inlineHelpText>Field Set developer name on the target object.</inlineHelpText>
    <label>Field Set Name</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>