force-app/main/default/objects/Guest_Capture_Config__mdt/fields/Form_Title__c.field-meta.xml
<CustomField>
    <fullName>Form_Title__c</fullName>
    <description>Card heading shown on the guest capture composer. Distinguishes stacked instances on the same page.</description>
    <inlineHelpText>Heading on the capture card, for example Vehicle energy use.</inlineHelpText>
    <label>Form Title</label>
    <length>80</length>
    <type>Text</type>
</CustomField>