force-app/main/default/objects/Guest_Capture_Config__mdt/fields/Min_Search_Length__c.field-meta.xml
<CustomField>
    <fullName>Min_Search_Length__c</fullName>
    <defaultValue>3</defaultValue>
    <description>Minimum typeahead term length before Apex runs a search. Shorter terms return an empty list.</description>
    <inlineHelpText>Minimum characters required to search. Default 3.</inlineHelpText>
    <label>Min Search Length</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>