force-app/main/default/objects/Guest_Capture_Config__mdt/fields/Parent_Copied_Fields__c.field-meta.xml
<CustomField>
    <fullName>Parent_Copied_Fields__c</fullName>
    <description>Optional JSON object mapping target field API names to parent field API names. On create, Apex copies those values from the selected parent. Query this field with SOQL (getInstance truncates long text).</description>
    <inlineHelpText>JSON map, for example {"OtherEmssnFctrId":"OtherEmssnFctrId"}. Guests do not submit these fields.</inlineHelpText>
    <label>Parent Copied Fields</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>