force-app/main/default/objects/Guest_Capture_Config__mdt/fields/Parent_Lookup_Field__c.field-meta.xml
<CustomField>
    <fullName>Parent_Lookup_Field__c</fullName>
    <description>API name of the lookup on the target object that stores the selected parent Id (for example VehicleAssetEmssnSrcId). Always set from parentId, never from the Field Set payload.</description>
    <inlineHelpText>Lookup field on the target object populated from the selected parent.</inlineHelpText>
    <label>Parent Lookup Field</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>