force-app/main/default/objects/Guest_Capture_Config__mdt/fields/Parent_Search_Label__c.field-meta.xml
<CustomField>
    <fullName>Parent_Search_Label__c</fullName>
    <description>Label for the parent typeahead on the guest capture composer.</description>
    <inlineHelpText>Typeahead label, for example Vehicle asset or Stationary asset.</inlineHelpText>
    <label>Parent Search Label</label>
    <length>80</length>
    <type>Text</type>
</CustomField>