force-app/main/default/objects/Guest_Capture_Config__mdt/fields/Result_Limit__c.field-meta.xml
<CustomField>
    <fullName>Result_Limit__c</fullName>
    <defaultValue>25</defaultValue>
    <description>Maximum number of typeahead rows returned. Apex also caps this at 200.</description>
    <inlineHelpText>SOQL LIMIT for typeahead results. Default 25.</inlineHelpText>
    <label>Result Limit</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>