force-app/main/default/objects/Guest_Capture_Config__mdt/fields/Search_Field__c.field-meta.xml
<CustomField>
    <fullName>Search_Field__c</fullName>
    <description>API name of the field matched with LIKE for parent typeahead (for example Name).</description>
    <inlineHelpText>Field API name used in the parent search LIKE filter.</inlineHelpText>
    <label>Search Field</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>