force-app/main/default/objects/Guest_Capture_Config__mdt/fields/Search_Object__c.field-meta.xml
<CustomField>
    <fullName>Search_Object__c</fullName>
    <description>API name of the parent object guests may typeahead-search (for example VehicleAssetEmssnSrc).</description>
    <inlineHelpText>SObject API name used for parent typeahead search.</inlineHelpText>
    <label>Search Object</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>