force-app/main/default/objects/Guest_Capture_Config__mdt/fields/Submit_Label__c.field-meta.xml
<CustomField>
    <fullName>Submit_Label__c</fullName>
    <description>Submit button label on the guest capture form.</description>
    <inlineHelpText>Button label, for example Create energy use record.</inlineHelpText>
    <label>Submit Label</label>
    <length>80</length>
    <type>Text</type>
</CustomField>