force-app/main/default/objects/Guest_Capture_Config__mdt/fields/Target_Object__c.field-meta.xml
<CustomField>
    <fullName>Target_Object__c</fullName>
    <description>API name of the object created by guest capture (for example VehicleAssetEnrgyUse).</description>
    <inlineHelpText>SObject API name inserted on submit.</inlineHelpText>
    <label>Target Object</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>